docs: docs for delete & create message
